<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MeetMe</string>
    <string name="no_map_error_message">Mapa indisponível</string>
    <string name="new_group_text">Ninguém criou grupo ainda? Crie um novo grupo para se encontrarem!</string>
    <string name="new_group_button">Novo Grupo</string>
    <string name="join_group_text">Você tem o código de um grupo já criado? Então entre nesse grupo!</string>
    <string name="join_group_button">Entrar em Grupo</string>
    <string name="map_activity_label">Encontrar Grupo</string>
    <string name="new_group_activity_label">Novo Grupo</string>
    <string name="join_group_activity_label">Entrar em Grupo</string>
    <string name="new_group_message">Digite seu nome para que seus amigos possam lhe identificar</string>
    <string name="name_hint">Nome</string>
    <string name="create_group_button">Criar Grupo</string>
    <string name="enter_group_password_message">Digite o código do grupo existente</string>
    <string name="group_password_hint">Código</string>
    <string name="join_group_with_password_button">Entrar</string>
    <string name="internet_error">Preciso de internet =(</string>
    <string name="generic_error">Ocorreu um erro =(</string>
    <string name="exit_map_confirm_message">
        Tem certeza que deseja sair? Não poderá retornar como mesmo usuário deste grupo novamente.
    </string>
</resources>
