<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_group_message"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/userNameInput"
        android:layout_gravity="center"
        android:hint="@string/name_hint" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_group_password_message"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:gravity="center_horizontal" />

    <EditText
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/groupPasswordInput"
        android:layout_gravity="center"
        android:hint="@string/group_password_hint" />

    <Space
        android:layout_width="fill_parent"
        android:layout_height="20dp"
        android:id="@+id/space" />

    <Button
        android:onClick="joinGroupClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_group_with_password_button"
        android:layout_gravity="center" />

</LinearLayout>